final-devops-project/kubernetes/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskboard
  namespace: taskboard
  labels:
    app: taskboard
spec:
  type: ClusterIP
  selector:
    app: taskboard
  ports:
    - name: http
      port: 80
      targetPort: http
