final-devops-project/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard
  namespace: taskboard
spec:
  ingressClassName: nginx
  rules:
    - host: taskboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskboard
                port:
                  number: 80
